Cambios realizado 17 de enero 2024

--- a/GestionVehicular/templates/base.html
+++ b/GestionVehicular/templates/base.html
@@ -32,7 +32,7 @@
 
   <!-- Preloader -->
   <div class="preloader flex-column justify-content-center align-items-center">
-    <img class="animation__shake" src="{% static 'assets/dist/img/AdminLTELogo.png' %}" alt="AdminLTELogo" height="60" width="60">
+    <img class="animation__shake" src="{% static 'assets/dist/img/pruebaimagen.png' %}" alt="pruebaimagen" height="60" width="60">
   </div>
 
   <!-- Navbar -->
@@ -120,7 +120,8 @@
               <div class="media-body">
                 <h3 class="dropdown-item-title">
                   Nora Silvester
-                  <span class="float-right text-sm text-warning"><i class="fas fa-star"></i></span>
+                  <span cla
+                  ss="float-right text-sm text-warning"><i class="fas fa-star"></i></span>
                 </h3>
                 <p class="text-sm">The subject goes here</p>
                 <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i> 4 Hours Ago</p>
@@ -177,8 +178,8 @@
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="index3.html" class="brand-link">
-      <img src="{% static 'assets/dist/img/AdminLTELogo.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-      <span class="brand-text font-weight-light">AdminLTE 3</span>
+      <img src="{% static 'assets/dist/img/pruebaimagen.png' %}" alt="pruebaimagen" class="brand-image img-circle elevation-3" style="opacity: .8">
+      <span class="brand-text font-weight-light">POLICIA NACIONAL</span>
     </a>
 
     <!-- Sidebar -->
@@ -245,7 +246,14 @@
             </p>
           </a>  
         </li>
-         
+        <li class="nav-item">
+          <a href="Reporte" class="nav-link">
+            <i class="nav-icon fas fa-th"></i>
+            <p>
+              REPORTE
+            </p>
+          </a>
+        </li>
         </ul>
       </nav>
       <!-- /.sidebar-menu -->
@@ -264,8 +272,7 @@
           </div><!-- /.col -->
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="">Nuevo</a></li>
-              <li class="breadcrumb-item active">Eliminar</li>
+             
             </ol>
           </div><!-- /.col -->
         </div><!-- /.row -->
