--- a/GestionVehicular/templates/login.html
+++ b/GestionVehicular/templates/login.html
@@ -4,32 +4,105 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>AdminLTE 3 | Log in</title>
-
-<img src="{% static 'assets/dist/img/proyectoimg.jpg' %}" class="img-circle elevation-2" alt="User Image">
+  <title>Inicio Sesion | Policia Nacional</title>
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="{% static 'assets/plugins/fontawesome-free/css/all.min.css' %}">
-  <!-- icheck bootstrap -->
+  <!-- Ionicons -->
+  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <!-- Tempusdominus Bootstrap 4 -->
+  <link rel="stylesheet" href="{% static 'assets/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css' %}">
+  <!-- iCheck -->
   <link rel="stylesheet" href="{% static 'assets/plugins/icheck-bootstrap/icheck-bootstrap.min.css' %}">
+  <!-- JQVMap -->
+  <link rel="stylesheet" href="{% static 'assets/plugins/jqvmap/jqvmap.min.css' %}">
   <!-- Theme style -->
   <link rel="stylesheet" href="{% static 'assets/dist/css/adminlte.min.css' %}">
+  <!-- overlayScrollbars -->
+  <link rel="stylesheet" href="{% static 'assets/plugins/overlayScrollbars/css/OverlayScrollbars.min.css' %}">
+  <!-- Daterange picker -->
+  <link rel="stylesheet" href="{% static 'assets/plugins/daterangepicker/daterangepicker.css' %}">
+  <!-- summernote -->
+  <link rel="stylesheet" href="{% static 'assets/plugins/summernote/summernote-bs4.min.css' %}">
+
+  <style>
+    body {
+        background-image: url("static/assets/dist/img/patrulla.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    .form-container {
+        max-width: 500px;
+        margin: 50px auto;
+        background-color: #ffffff;
+        padding: 20px;
+        border-radius: 5px;
+        box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+    }
+
+    .login-form, .denuncia-form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .login-form input[type="text"], .login-form input[type="password"], .denuncia-form input[type="text"], .denuncia-form textarea {
+        width: 100%;
+        padding: 10px;
+        margin: 10px 0;
+        border: 1px solid #ddd;
+        border-radius: 3px;
+    }
+
+    .login-form input[type="submit"], .denuncia-form input[type="submit"], .denuncia-form button {
+        width: 100%;
+        padding: 10px;
+        margin: 10px 0;
+        background-color: #007bff;
+        color: #ffffff;
+        border: none;
+        border-radius: 3px;
+        cursor: pointer;
+    }
+
+    .login-form input[type="submit"]:hover, .denuncia-form input[type="submit"]:hover, .denuncia-form button:hover {
+        background-color: #0056b3;
+    }
+
+    .login-form a, .denuncia-form a {
+        text-decoration: none;
+        color: #666;
+    }
+
+    .login-form a:hover, .denuncia-form a:hover {
+        color: #333;
+    }
+
+    .denuncia-button {
+        background-color: #ff0000;
+        color: #ffffff;
+        padding: 10px;
+        border: none;
+        border-radius: 3px;
+        cursor: pointer;
+    }
+
+    .denuncia-button:hover {
+        background-color: #cc0000;
+    }
+</style>
 </head>
 <body class="hold-transition login-page">
-<div class="login-box">
-  <div class="login-logo">
-    <a href="../../index2.html"><b>POLICIA</b>NACIONAL</a>
-  </div>
-  <!-- /.login-logo -->
   <div class="card">
     <div class="card-body login-card-body">
       
-
-      <form action="../../index3.html" method="post">
+      <form action="../../HME" method="post">
+        {% csrf_token %}
         <div class="input-group mb-3">
-          <input type="email" class="form-control" placeholder="Email">
+          <input type="email" class="form-control" placeholder="Email" name="email">
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-envelope"></span>
@@ -37,7 +110,7 @@
           </div>
         </div>
         <div class="input-group mb-3">
-          <input type="password" class="form-control" placeholder="Password">
+          <input type="password" class="form-control" placeholder="Password" name="password">
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-lock"></span>
@@ -64,22 +137,121 @@
       <!-- /.social-auth-links -->
 
       <p class="mb-1">
-        <a href="forgot-password.html">Olvide mi contraseña</a>
+        <a href="forgot-password.html">Olvidé mi contraseña</a>
       </p>
       <p class="mb-0">
         <a href="register.html" class="text-center">Registrarse</a>
       </p>
+
+      <button class="btn btn-primary btn-block" data-toggle="modal" data-target="#myModal">DENUNCIAS</button>
     </div>
     <!-- /.login-card-body -->
-  </div>
+ </div>
+  <!-- /.login-card-body -->
+
+    <script>
+        function showDenunciaForm() {
+            document.getElementById("denunciaForm").style.display = "block";
+        }
+    </script>
+
+            <div class="wrapper">
+
+ 
+                <div id="myModal" class="modal fade" role="dialog">
+                    <div class="modal-dialog">
+                      <!-- Modal content-->
+                      <div class="modal-content">
+                        
+                        <div class="modal-body">
+                          <!-- AQUÍ LOS DATOS DE TUS USUARIOS REGISTRADOS SERÍAN MOSTRADOS -->
+                            <form method="post" action="{% url 'DENUNCIAS' %}">
+                              {% csrf_token %}
+                            <div class="form-group">
+                              <label for="nombres">Nombre:</label>
+                              <input type="text" class="form-control" id="nombres" name="nombres">
+                            </div>
+                            <div class="form-group">
+                              <label for="apellidos">Apellidos:</label>
+                              <input type="text" class="form-control" id="apellidos" name="apellidos">
+                            </div>
+                            <div class="form-group">
+                              <label for="circuito">Circuito:</label>
+                              <input type="text" class="form-control" id="circuito" name="circuito">
+                            </div>
+                            <div class="form-group">
+                              <label for="subcircuito">Subcircuito:</label>
+                              <input type="text" class="form-control" id="subcircuito" name="subcircuito">
+                            </div>
+                            <div class="form-group">
+                              <label for="tipo">Tipo (Reclamo/Sugerencia):</label>
+                              <select class="form-control" id="tipo" name="tipo">
+                                  <option value="Reclamo">Reclamo</option>
+                                  <option value="Sugerencia">Sugerencia</option>
+                              </select>
+                            </div>
+                            <div class="form-group">
+                              <label for="detalle">Detalle:</label>
+                              <textarea class="form-control" id="detalle" name="detalle" rows="5" maxlength="300"></textarea>
+                              <small class="form-text text-muted">Máximo 300 caracteres.</small>
+                            </div>
+                            <div class="form-group">
+                              <label for="contacto">Contacto:</label>
+                              <input type="text" class="form-control" id="contacto" name="contacto">
+                            </div>
+                            <button type="submit" class="btn btn-default">Enviar</button>
+                          </form>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+  <!-- /.content-wrapper -->
+ 
+
+  <!-- Control Sidebar -->
+  <aside class="control-sidebar control-sidebar-dark">
+    <!-- Control sidebar content goes here -->
+  </aside>
+  <!-- /.control-sidebar -->
 </div>
-<!-- /.login-box -->
+<!-- ./wrapper -->
 
 <!-- jQuery -->
-<script src="../../plugins/jquery/jquery.min.js"></script>
+<script src="{% static 'assets/plugins/jquery/jquery.min.js' %}"></script>
+<!-- jQuery UI 1.11.4 -->
+<script src="{% static 'assets/plugins/jquery-ui/jquery-ui.min.js' %}"></script>
+<!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
+<script>
+  $.widget.bridge('uibutton', $.ui.button)
+</script>
 <!-- Bootstrap 4 -->
-<script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="{% static 'assets/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+<!-- ChartJS -->
+<script src="{% static 'assets/plugins/chart.js/Chart.min.js' %}"></script>
+<!-- Sparkline -->
+<script src="{% static 'assets/plugins/sparklines/sparkline.js' %}"></script>
+<!-- JQVMap -->
+<script src="{% static 'assets/plugins/jqvmap/jquery.vmap.min.js' %}"></script>
+<script src="{% static 'assets/plugins/jqvmap/maps/jquery.vmap.usa.js' %}"></script>
+<!-- jQuery Knob Chart -->
+<script src="{% static 'assets/plugins/jquery-knob/jquery.knob.min.js' %}"></script>
+<!-- daterangepicker -->
+<script src="{% static 'assets/plugins/moment/moment.min.js' %}"></script>
+<script src="{% static 'assets/plugins/daterangepicker/daterangepicker.js' %}"></script>
+<!-- Tempusdominus Bootstrap 4 -->
+<script src="{% static 'assets/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js' %}"></script>
+<!-- Summernote -->
+<script src="{% static 'assets/plugins/summernote/summernote-bs4.min.js' %}"></script>
+<!-- overlayScrollbars -->
+<script src="plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js' %}"></script>
 <!-- AdminLTE App -->
-<script src="../../dist/js/adminlte.min.js"></script>
+<script src="{% static 'assets/dist/js/adminlte.js' %}"></script>
+<!-- AdminLTE for demo purposes -->
+<script src="{% static 'assets/dist/js/demo.js' %}"></script>
+<!-- AdminLTE dashboard demo (This is only for demo purposes) -->
+<script src="{% static 'assets/dist/js/pages/dashboard.js' %}"></script>
 </body>
 </html>
